RESOLVED FIXED303378
ReadableStream::cancel is not handling the case of an empty JSValue
https://bugs.webkit.org/show_bug.cgi?id=303378
Summary ReadableStream::cancel is not handling the case of an empty JSValue
youenn fablet
Reported 2025-12-02 02:53:19 PST
ReadableStream::cancel is not handling the case of an empty JSValue
Attachments
youenn fablet
Comment 1 2025-12-02 02:53:39 PST
youenn fablet
Comment 2 2025-12-02 03:15:03 PST
EWS
Comment 3 2025-12-02 14:48:00 PST
Committed 303789@main (f7319b018f79): <https://commits.webkit.org/303789@main> Reviewed commits have been landed. Closing PR #54690 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.