ReadableStream::cancel is not handling the case of an empty JSValue rdar://165347557 https://bugs.webkit.org/show_bug.cgi?id=303378

Reviewed by Chris Dumez.

InternalReadableStream::cancel s returning an empty value in case of exception, which cannot be jsCast.
We add null checks to prevent jsCasting empty values.
As a fly-by fix, we also remove some method declarations that are no longer needed after the pipeTo JS built-in implementation removal.

Covered by added test.

Canonical link: https://commits.webkit.org/303789@main